--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,26 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+
+}
+
+@media only screen and (max-width: 1200px) {
+  html {
+    font-size: 73%;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  html {
+    font-size: 62.25%;
+  }
+}
+
+
+@media only screen and (max-width: 450px) {
+  html {
+    font-size: 38.5%;
+  }
 }
 
 body {
