--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,7 +28,13 @@ html {
 
 @media only screen and (max-width: 450px) {
   html {
-    font-size: 38.5%;
+    font-size: 50%;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  html {
+    font-size: 75%;
   }
 }
 
